Improved logging and fixed issue with stand alone switch upgrade with no software image

--- a/bash/initztp.cfg
+++ b/bash/initztp.cfg
@@ -12,6 +12,7 @@ ip route 0.0.0.0/0 {{ gateway }}
 interface mgmt
 no shutdown
 ip static {{ ipaddress }}/{{ netmask }}
+no ip dhcp
 default-gateway {{ gateway }}
 {% endif %}
 https-server vrf default
