Fixed issues on several features. Added functionality:  websockets with CX (Telemetry) and Role Based app access

--- a/bash/defaultztp.cfg
+++ b/bash/defaultztp.cfg
@@ -3,8 +3,72 @@ user admin group administrators password plaintext ztpinit
 ssh server vrf default
 ssh server vrf mgmt
 ip route 0.0.0.0/0 {{gateway}}
-interface vlan 1
-no ip dhcp
+vlan {{ vlan }}
+{% if switchtype==24 %}
+interface 1/1/24
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/25
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/26
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/27
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/28
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+{% elif switchtype==48 %}
+interface 1/1/48
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/49
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/50
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/51
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+interface 1/1/52
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
+{% endif %}
+interface vlan {{ vlan }}
+{% if vlan=="1" %}no ip dhcp{% endif %}
 ip address  {{ipaddress}}/{{netmask}}
 https-server vrf default
 https-server vrf mgmt
