Minor change in the documentation and ZTP default configuration

--- a/bash/defaultztp.cfg
+++ b/bash/defaultztp.cfg
@@ -5,6 +5,12 @@ ssh server vrf mgmt
 ip route 0.0.0.0/0 {{gateway}}
 vlan {{ vlan }}
 {% if switchtype==24 %}
+interface 1/1/23
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
 interface 1/1/24
 {% if tagged==1 %}
 vlan trunk allowed {{ vlan }}
@@ -36,6 +42,12 @@ vlan trunk allowed {{ vlan }}
 vlan access {{ vlan }}
 {% endif %}
 {% elif switchtype==48 %}
+interface 1/1/47
+{% if tagged==1 %}
+vlan trunk allowed {{ vlan }}
+{% else %}
+vlan access {{ vlan }}
+{% endif %}
 interface 1/1/48
 {% if tagged==1 %}
 vlan trunk allowed {{ vlan }}
